--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -169,6 +169,8 @@
     <string name="audio_recording_error">Error with recording :(</string>
     <string name="message_copied_to_clipboard">Copied to clipboard</string>
     <string name="view_details">View Details</string>
+    <string name="select_all_messages">Select All Messages</string>
+    <string name="select_all_conversations">Select All Conversations</string>
     <string name="delete">Delete</string>
     <string name="copy_message">Copy Text</string>
     <string name="resend">Resend</string>
