--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -209,6 +209,8 @@
     <string name="private_conversation_disclaimer">This is a <b>private conversation</b> and cannot be opened from the compose screen.</string>
 
     <!-- Onboarding Screen -->
+    <string name="google_requires_default_sms">Google is now requiring any SMS apps to be set as the default messaging app, before they can access or send any messages. This permission is required.</string>
+    <string name="google_requires_default_sms_policy">View Policy</string>
     <string name="permissions_needed">The app can\'t work without those permissions! You need to
         accept them before we can continue.</string>
     <string name="loading_messages">Optimizing…</string>
