--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -154,7 +154,6 @@
     <string name="attached_image">Attached Image</string>
     <string name="remove_image">Remove Attached Image</string>
     <string name="edit_image">Edit Attached Image</string>
-    <string name="edit">Edit</string>
     <string name="edit_recipients">Edit Recipients</string>
     <string name="select_folder">Select Folder for Conversation</string>
     <string name="permission_needed_for_action">Permissions needed for this action.</string>
@@ -196,7 +195,9 @@
     <!-- Templates -->
     <string name="type_template_text">Type template text…</string>
     <string name="delete_template">Are you sure you want to delete this template?</string>
+    <string name="edit_or_delete_template">Do you want to edit or delete this template?</string>
     <string name="no_templates">Use the <b>+</b> button to create a template</string>
+    <string name="edit">Edit</string>
 
     <!-- Compose Screen -->
     <string name="compose_message">Compose new message</string>
