--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -645,7 +645,7 @@
     <string name="rate_it_title">Top ratings go a long way</string>
     <string name="rate_it_summary"><b>5-star ratings</b> are extremely helpful to the app\'s growth
         and visibility on the Play Store. If you want to see the app <i>continue to soar</i>, help me out!</string>
-    <string name="rate_it_not_ready">Not ready to rate it? No problem. Back out of this dialog and I will never ask again.</string>
+    <string name="rate_it_not_ready"><b>Not ready to rate it?</b> No problem. Back out of this dialog and I will never ask again.</string>
     <string name="love_pulse_question">Love Pulse?</string>
     <string name="give_a_rating">Consider giving it a rating or sharing it with your friends!\n\n
         Your 5 star reviews warm my heart :)</string>
