UI for blacklisting by phrase (behind feature flag)

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -401,10 +401,14 @@
     <string name="right_to_left_swipe">Right-to-Left Swipe</string>
     <string name="no_swipe">Disable swipe</string>
     <string name="blacklist_hint">Type number to blacklist…</string>
+    <string name="enter_phrase">Enter Phrase</string>
+    <string name="enter_phone">Enter Phone Number</string>
+    <string name="blacklist_phrase_hint">Type phrase to blacklist…</string>
     <string name="add_blacklist">%1$s\n\nAre you sure you want to add this blacklist? Messages will
         no longer be saved when they come from this number and you will not be notified!</string>
     <string name="remove_blacklist">%1$s\n\nDo you want to delete this blacklist?</string>
     <string name="blacklist_need_number">You need to enter a phone number to blacklist!</string>
+    <string name="blacklist_need_phrase">You need to enter a phrase to blacklist!</string>
     <string name="no_blacklists">No blacklists</string>
     <string name="no_blacklists_summary">You can add one with the plus button below!</string>
     <string name="add">Add</string>
