--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="fullscreen">Fullscreen</string>
     <string name="attached_image">Attached Image</string>
     <string name="remove_image">Remove Attached Image</string>
+    <string name="remove_image_short">Remove Image</string>
     <string name="edit_image">Edit Attached Image</string>
     <string name="edit_recipients">Edit Recipients</string>
     <string name="select_folder">Select Folder for Conversation</string>
