--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -588,6 +588,8 @@
     <string name="scheduled_repeat_monthly">Repeat monthly</string>
     <string name="scheduled_repeat_yearly">Repeat yearly</string>
     <string name="remove_scheduled_message">Do you want to delete this scheduled message?</string>
+    <string name="select_image">Select Image from Phone</string>
+    <string name="select_gif">Search for a GIF</string>
 
     <!-- Encryption -->
     <string name="encrypting_and_uploading">Encrypting and uploading…</string>
