--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -591,6 +591,7 @@
     <string name="remove_scheduled_message">Do you want to delete this scheduled message?</string>
     <string name="select_image">Select Image from Phone</string>
     <string name="select_gif">Search for a GIF</string>
+    <string name="media_on_primary_device">Media, within a scheduled message, can only be viewed on the phone app.</string>
 
     <!-- Encryption -->
     <string name="encrypting_and_uploading">Encrypting and uploading…</string>
