long clicking the send button will allow you to schedule the message

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -193,6 +193,9 @@
     <string name="copy_link">Copy Link</string>
     <string name="attach_vcard">Attach Contact as vCard</string>
     <string name="attach_plain_text">Attach Contact as Plain Text</string>
+    <string name="send_as_scheduled_message_question">Would you like to schedule this message for later?</string>
+    <string name="send_as_scheduled_message">Send as scheduled message</string>
+    <string name="send_without_signature">Send without signature</string>
 
     <!-- Templates -->
     <string name="type_template_text">Type template text…</string>
